apps/prod/mow/www.connme.ru/ingress/app-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress-redirect
#   annotations:
#     nginx.ingress.kubernetes.io/proxy-body-size: "0"
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
#     nginx.ingress.kubernetes.io/permanent-redirect: "https://www.connme.ru"
# spec:
#   rules:
#   - host: connme.ru
#   tls:
#   - hosts:
#     - connme.ru
#     secretName: https-secret-redirect
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'connme.ru' ) {
        rewrite ^ https://www.connme.ru$request_uri permanent;
      }
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - www.connme.ru
    - connme.ru
    secretName: https-secret
  rules:
  - host: www.connme.ru
    http:
      paths: &app_paths
      - pathType: Prefix
        path: /captcha
        backend:
          service:
            name: captcha-service
            port:
              number: 80
      - pathType: Prefix
        path: /images
        backend:
          service:
            name: images-service
            port:
              number: 80
      - pathType: Prefix
        path: /video
        backend:
          service:
            name: images-service
            port:
              number: 80
      - pathType: Prefix
        path: /helpdesk_ticket_attaches
        backend:
          service:
            name: images-service
            port:
              number: 80
      - pathType: Prefix
        path: /cgi-bin
        backend:
          service:
            name: app-service
            port:
              number: 80
      - pathType: Prefix
        path: /api/v1/domain
        backend:
          service:
            name: domain-name-service
            port:
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ui-service
            port:
              number: 80
  - host: connme.ru
    http:
      paths: *app_paths
